# psltools

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  publish.yml
assets/changelog/: Changelog.md
assets/tools/: check.md  convert.md  filter.md  merge.md  score.md  sort.md  split.md  stats.md  swap.md
assets/usage/: usage.md
bench/: benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_psl.rs
src/: lib.rs  main.rs
src/cli/: check.rs  convert.rs  filter.rs  merge.rs  mod.rs  score.rs  sort.rs  sort_core.rs  split.rs  stats.rs  swap.rs
src/io/: index.rs  mod.rs  reader.rs  storage.rs  stream.rs  writer.rs
src/model/: block.rs  error.rs  mod.rs  psl.rs
src/ops/: check.rs  convert.rs  mod.rs  region.rs  score.rs  swap.rs
src/parser/: common.rs  mod.rs  parallel.rs  sequential.rs
tests/: golden.rs  index.rs  io.rs  ops.rs  parsing.rs  property.rs  roundtrip.rs  storage.rs  strands.rs  streaming.rs
tests/data/: basic.psl  neg_strand.psl  pslx.psl  translated.psl  with_header.psl
