[package]
name = "psltools"
version = "0.0.1"
edition = "2024"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "Apache-2.0"
description = "work with .psl files in Rust"
homepage = "https://github.com/alejandrogzi/psltools"
repository = "https://github.com/alejandrogzi/psltools"
readme = "README.md"
keywords = ["psl", "blat", "lib", "genomic", "tool"]
default-run = "psltools"

[features]
default = ["mmap", "cli"]
cli      = ["dep:clap", "dep:log", "dep:simple_logger", "dep:num_cpus", "parallel"]
mmap     = ["dep:memmap2"]
gzip     = ["dep:flate2", "flate2/zlib-rs"]
parallel = ["dep:rayon"]
index    = []
serde    = ["dep:serde", "smallvec/serde"]
bigcoords = []

[dependencies]
clap         = { version = "4", features = ["derive"], optional = true }
flate2       = { version = "1", optional = true, default-features = false }
genepred     = "0.0.13"
memchr       = "2"
smallvec     = "1"
memmap2      = { version = "0.9", optional = true }
rayon        = { version = "1", optional = true }
log          = { version = "0.4", optional = true }
simple_logger= { version = "5", optional = true, features = ["stderr"] }
num_cpus     = { version = "1", optional = true }
itoa         = "1"
serde        = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[[bin]]
name = "psltools"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "benchmark"
path = "bench/benchmark.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
